# mini-redis-2

./: .gitignore  CMakeLists.txt  README.md
mini-redis-client/: CMakeLists.txt
mini-redis-client/include/: client.h
mini-redis-client/src/: client.cpp  main.cpp
mini-redis-server/: CMakeLists.txt
mini-redis-server/include/: data_handler.h  server.h
mini-redis-server/src/: data_handler.cpp  main.cpp  server.cpp
